Update index.html hopefully for google search visibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Automated Prayer Times</title>
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Automated daily prayer time emailer — get accurate local prayer times and daily reminders delivered automatically.">
+    <meta name="keywords" content="prayer times, salah times, daily reminders, automation, web app, vercel, fly.io">
+    <meta name="author" content="Kareem Mahfouf">
+
+    <!-- Open Graph (for nice link previews when sharing) -->
+    <meta property="og:title" content="Automated Prayer Times">
+    <meta property="og:description" content="Get your daily prayer times and unique reminders sent automatically via email.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://automatedprayertimes.vercel.app/">
 </head>
 <body>
 <h1>Automated Prayer Times</h1>
