adding google site ownership to html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Automated daily prayer time emailer — get accurate local prayer times and daily reminders delivered automatically.">
     <meta name="keywords" content="prayer times, salah times, daily reminders, automation, web app, vercel, fly.io">
     <meta name="author" content="Kareem Mahfouf">
+    <meta name="google-site-verification" content="qYlKn_TH5sgL4_7KxigsmaWOeeLb9os__z7sFvTvdEs" />
 
     <!-- Open Graph (for nice link previews when sharing) -->
     <meta property="og:title" content="Automated Prayer Times">
