html and css updates

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <meta property="og:url" content="https://automatedprayertimes.vercel.app/">
 </head>
 <body>
-<h1>Automated Prayer Times</h1>
+<header>
+  <nav>
+    <a  id="headerhome" href="index.html">Home</a>
+    <a id="headerabout" href="about.html">About</a>
+  </nav>
+  <h1>Automated Prayer Times</h1>
+</header>
 <p id="one">Welcome to Automated Prayer Time Alerts — a simple service designed to help you stay connected to your daily prayers. Each morning, you will receive an email with the prayer times according to your local masjid, along with a hadith (Sahih Bukhari randomised daily).
 <br><br>Enter your email below to subscribe and begin receiving your daily prayer time updates.</p>
 <form>
@@ -38,7 +44,7 @@
 </table>
 <hr>
 <footer>
-    <p id="three">Created and maintained by <strong>Kareem Mahfouf</strong></p>
+    <p id="three">© 2025 Automated Prayer Times — Created and maintained by <a href="https://github.com/kareemmahfouf"><strong>Kareem Mahfouf</strong></a></p>
 </footer>
 <script src="script.js"></script>
 </body>
